monitor_errors.txt
make: Entering directory `/project/scratch01/compiling/k.sherman/linux_source/linux'
  CC [M]  /project/scratch01/compile/k.sherman/linux-security-module/kenlex_monitor.o
/project/scratch01/compile/k.sherman/linux-security-module/kenlex_monitor.c: In function 'setup_kenlex_monitor':
/project/scratch01/compile/k.sherman/linux-security-module/kenlex_monitor.c:26:5: error: implicit declaration of function 'inotify_init' [-Werror=implicit-function-declaration]
     inotify_fd = inotify_init();
     ^
/project/scratch01/compile/k.sherman/linux-security-module/kenlex_monitor.c: In function 'inotify_listen':
/project/scratch01/compile/k.sherman/linux-security-module/kenlex_monitor.c:57:71: warning: variable length array 'buffer' is used [-Wvla]
     char buffer[buffer_len] __attribute__((aligned(__alignof__(struct inotify_event))));
                                                                       ^
/project/scratch01/compile/k.sherman/linux-security-module/kenlex_monitor.c:57:5: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
     char buffer[buffer_len] __attribute__((aligned(__alignof__(struct inotify_event))));
     ^
/project/scratch01/compile/k.sherman/linux-security-module/kenlex_monitor.c:62:9: error: implicit declaration of function 'poll' [-Werror=implicit-function-declaration]
         int poll_rc = poll(pfd_array, 1, -1);
         ^
/project/scratch01/compile/k.sherman/linux-security-module/kenlex_monitor.c:69:13: error: implicit declaration of function 'read' [-Werror=implicit-function-declaration]
             len = read(pfd_array[0].fd, buffer, buffer_len);
             ^
/project/scratch01/compile/k.sherman/linux-security-module/kenlex_monitor.c: In function 'kenlex_add_path':
/project/scratch01/compile/k.sherman/linux-security-module/kenlex_monitor.c:103:9: error: implicit declaration of function 'inotify_add_watch' [-Werror=implicit-function-declaration]
         wd = inotify_add_watch(inotify_fd, path, IN_ALL_EVENTS);
         ^
cc1: some warnings being treated as errors
make[2]: *** [/project/scratch01/compile/k.sherman/linux-security-module/kenlex_monitor.o] Error 1
make[1]: *** [/project/scratch01/compile/k.sherman/linux-security-module] Error 2
make: *** [__sub-make] Error 2
make: Leaving directory `/project/scratch01/compiling/k.sherman/linux_source/linux'
